tests/a/tests/provenance/fail/let/let.2.stderr
error: expected (root,*), found (*,root)
  --> tests/provenance/fail/let/let.2.rs:12:13
   |
12 |     let y = x;
   |             ^
